[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/MainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Game.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.811765, 0.929412, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MainLabel" type="Label" parent="MainMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -116.0
margin_right = 160.0
margin_bottom = -44.0
custom_fonts/font = ExtResource( 2 )
text = "MAIN MENU"
align = 1
valign = 1
uppercase = true

[node name="PlayBtn" type="Button" parent="MainMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 12.0
margin_right = 64.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="ExitBtn" type="Button" parent="MainMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 84.0
margin_right = 64.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="LevelMenu" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="LevelMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.345098, 0.811765, 0.929412, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelLabel" type="Label" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 56.0
margin_right = 160.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 2 )
text = "LEVEL"
align = 1
valign = 1
uppercase = true

[node name="Level1" type="Button" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_top = 192.0
margin_right = -224.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Level2" type="Button" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 192.0
margin_right = -96.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="Level3" type="Button" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 192.0
margin_right = 32.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="Level4" type="Button" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 96.0
margin_top = 192.0
margin_right = 160.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "4"

[node name="Level5" type="Button" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 224.0
margin_top = 192.0
margin_right = 288.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "5"

[node name="BackBtn" type="Button" parent="LevelMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -120.0
margin_right = 64.0
margin_bottom = -86.0
custom_fonts/font = SubResource( 2 )
text = "BACK"

[node name="PausedMenu" type="CanvasLayer" parent="."]
pause_mode = 1
layer = 10
visible = false

[node name="Background1" type="ColorRect" parent="PausedMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background2" type="ColorRect" parent="PausedMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.5
margin_top = -192.0
margin_right = 327.5
margin_bottom = 192.0
color = Color( 0.376471, 0.376471, 0.376471, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="PausedMenu/Background2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 52.0
margin_right = 81.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"

[node name="ResumeBtn" type="Button" parent="PausedMenu/Background2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -28.0
margin_right = 64.5
margin_bottom = 6.0
custom_fonts/font = SubResource( 3 )
text = "RESUME"

[node name="QuitBtn" type="Button" parent="PausedMenu/Background2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = 52.0
margin_right = 64.5
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"

[connection signal="pressed" from="MainMenu/ColorRect/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MainMenu/ColorRect/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="LevelMenu/ColorRect/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="LevelMenu/ColorRect/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="LevelMenu/ColorRect/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="LevelMenu/ColorRect/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="LevelMenu/ColorRect/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="LevelMenu/ColorRect/BackBtn" to="." method="_on_BackBtn_pressed"]
